# ani-loader

./: .gitignore  Cargo.toml  README.md  build.rs  launch_gui.sh  recomp.sh
src/: main.rs
ui/: loader.slint
