[package]
name = "ani-loader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
libc = "0.2"
slint = { version = "1.16.1", default-features = false, features = [
    "compat-1-2", 
    "renderer-software", 
    "backend-linuxkms-noseat"
] }

[build-dependencies]
slint-build = { version = "1.16.1" }